--- a/NETSDL2_Ttf/NETSDL2_Ttf.vcxproj.filters
+++ b/NETSDL2_Ttf/NETSDL2_Ttf.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\TTFWrapped.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\TTFDirection.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="..\..\SDL2_ttf-2.20.1\lib\x64\SDL2_ttf.dll">
@@ -62,6 +65,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\TTFWrapped.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\TTFDirection.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
