--- a/NETSDL2Test/NETSDL2Test.csproj
+++ b/NETSDL2Test/NETSDL2Test.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\NETSDL2\NETSDL2.vcxproj" />
     <ProjectReference Include="..\NETSDL2_Image\NETSDL2_Image.vcxproj" />
     <ProjectReference Include="..\NETSDL2_mixer\NETSDL2_mixer.vcxproj" />
+    <ProjectReference Include="..\NETSDL2_Net\NETSDL2_Net.vcxproj" />
     <ProjectReference Include="..\NETSDL2_Ttf\NETSDL2_Ttf.vcxproj" />
   </ItemGroup>
 
